--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "angular-easy-image-preloader",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Lib to pre load images",
-  "main": "controller.js",
+  "main": "source/preloader.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/douglasPinheiro/angular-easy-image-preloader/issues"
   },
-  "homepage": "https://github.com/douglasPinheiro/angular-easy-image-preloader#readme"
+  "homepage": "https://github.com/douglasPinheiro/angular-easy-image-preloader#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-bytediff": "^1.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-uglify": "^3.0.0"
+  }
 }
